--- a/src/MCQComponents/MCQChoice.css
+++ b/src/MCQComponents/MCQChoice.css
@@ -9,8 +9,8 @@
 .choice-button {
   flex-grow: 1;
   white-space: normal;
-  --background: #8D8998;
-  --background-activated: #AD9B9A;
+  --background: #8d8998;
+  --background-activated: #ad9b9a;
 }
 
 /* Styling for the correct button after clicking */
