--- a/src/pages/AppNameHeader.css
+++ b/src/pages/AppNameHeader.css
@@ -4,3 +4,18 @@
   font-size: 1.2em;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.header-container{
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
+.settings-icon {
+  position: absolute;
+  right: 0;
+  align-self: center;
+  margin-right: 1rem;
+  top: 25%;
+  font-size: 1.5rem;
+}
