--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -1,7 +1,7 @@
 /* Background color for the login page */
 .login-content {
   /* background: linear-gradient(#2980b9, #6dd5fa);*/
-  background: white;
+  background: #f1f2eb;
 }
 
 
