--- a/src/pages/AppNameHeader.css
+++ b/src/pages/AppNameHeader.css
@@ -5,12 +5,6 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.header-container{
-  display: flex;
-  justify-items: center;
-  align-items: center;
-}
-
 .settings-icon {
   position: absolute;
   right: 0;
@@ -18,4 +12,28 @@
   margin-right: 1rem;
   top: 25%;
   font-size: 1.5rem;
+}
+
+.dropdown-settings{
+  position: absolute;
+  background-color: #f4f4f4;
+  right: 0;
+  border-radius: 0 0 0.8rem 0.8rem;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+  transition: 1s;
+}
+
+.column-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.texts{
+  margin-left: 1rem;
+  color: darkgray;
+ 
+  font-size: 1rem;
 }
