--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
 }
@@ -24,3 +25,29 @@
 .tutorial-button {
   width: 70%;
 }
+
+/* Styling for the container of icon and tutorial portal */
+.top-container {
+  height: 15%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.tutorial-card {
+  position: absolute;
+  margin-top: 10%;
+  margin-right: 5%;
+  top: 0;
+  right: 0;
+}
+/* Styling for the portal card content */
+.tutorial-card-content {
+  padding: 5px;
+}
+
+.logo-img {
+  height: 150%;
+}
+
