--- a/src/ButtonComp/Button.css
+++ b/src/ButtonComp/Button.css
@@ -3,7 +3,6 @@
   margin: 10px;
   padding: 10px 25px;
   text-align: center;
-  text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;
@@ -58,26 +57,35 @@
     to right,
     /* #ece9e6 0%,
     #ffffff 51%,
-    #ece9e6 100% */ #6dd5fa 0%,
-    #2980b9 51%,
-    #6dd5fa 100%
+    #ece9e6 100% */
+    #6dd5fa 0%, #2980b9 51%, #6dd5fa 100%
   );
 }
 
-.log-button:hover {
-  color: honeydew;
+.login-button:hover {
+  background-color: darkgreen;
 }
 
 .login-button {
+  position: absolute;
+  color: pink;
+  width: 70%;
+  height: 10%;
+  border-radius: 10px;
+  background-color: saddlebrown;
+  font-size: 1.5em;
+  font-weight: 900;
   opacity: 0;
   bottom: 20%;
   animation: displayButton 1100ms ease-out forwards;
   animation-delay: 500ms;
+  --background-activated: darkgreen;
 }
 
 .logout-button {
   left: 12.5%;
-  bottom: 3%;
+  bottom: 5%;
+  
 }
 
 /* Animation for the login button to appear */
@@ -99,7 +107,7 @@
   }
 }
 
-.home-button {
+.home-button{
   background-image: linear-gradient(
     to right,
     #02aab0 0%,
