Fix the swiping gestures for tutorial cards

--- a/src/CardComp/Card.css
+++ b/src/CardComp/Card.css
@@ -119,7 +119,7 @@ MCQ Card question always takes 60% */
   font-size: 1.3em;
   font-weight: 900;
   margin-bottom: 0;
-  color: #0056d2;
+  color: gray;
   top: 5px;
   text-align: center;
   backface-visibility: hidden;
