--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -4,10 +4,11 @@
 }
 
 /* Styling for the Toolbar counter */
-.title {
+.stats-title {
   font-size: 1.2em;
   font-weight: 900;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: green;
 }
 
 /* Styling for the stack of card without animation */
@@ -42,4 +43,12 @@
   60% {
     transform: translate3d(3px, 0, 0);
   }
+}
+
+.home-icon{
+  position: absolute;
+  margin-left: 1.5rem;
+  top: 25%;
+  align-self: center;
+  font-size: 1.5rem;
 }
