--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -47,8 +47,9 @@
 
 .home-icon{
   position: absolute;
-  margin-left: 1.5rem;
+  margin-right: 1rem;
   top: 25%;
+  right: 0;
   align-self: center;
   font-size: 1.5rem;
 }
