--- a/src/IndicationComp/CardsTab.css
+++ b/src/IndicationComp/CardsTab.css
@@ -4,10 +4,10 @@
   padding: 0;
   position: absolute;
   left: 45%;
-  top: 0.05rem;
+  top: 0.2rem;
   float: left;
-  width: 1.9rem;
-  height: 2.8rem;
+  width: 1.8rem;
+  height: 2.3rem;
   border: 1px solid black;
   border-radius: 5px;
   background: #fff;
@@ -16,12 +16,13 @@
   justify-content: center;
   align-items: center;
   transition: top 0.3s ease, left 0.3s ease;
+  margin-top: 0.25rem;
 }
 
 /* Styling the number on the cards */
 .tab-card p {
   color: black;
-  font-size: 160%;
+  font-size: 1.15rem;
   font-weight: bold;
 }
 
@@ -54,7 +55,7 @@
 
 /* The first one will be te rightmost card */
 .first-activate {
-  left: 48%;
+  left: 47%;
   top: 0.11rem;
   transform: rotate(10deg);
 }
@@ -68,7 +69,7 @@
 
 /* The third on will be the leftmost card */
 .third-activate {
-  left: 42%;
+  left: 43%;
   top: 0.03rem;
   transform: rotate(-10deg);
 }
