--- a/src/IndicationComp/ActionButtons.css
+++ b/src/IndicationComp/ActionButtons.css
@@ -1,19 +1,28 @@
-.higher-container{
+.higher-container {
   position: fixed;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  bottom: 0.85rem;
+}
+
+.action-buttons-container {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: center;
   align-items: center;
-  bottom: 0.6rem;
 }
-.action-button{
+.action-button {
+  display: flex;
+  flex-direction: column;
   border: 1px solid darkgray;
   background: #f4f4f4;
   border-radius: 9999px;
   justify-content: center;
   align-items: center;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   padding: 0.5rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
