--- a/src/CardComp/Card.css
+++ b/src/CardComp/Card.css
@@ -55,6 +55,7 @@
   flex-direction: column;
   line-height: 1.5em;
   max-width: 95%;
+  white-space: pre-wrap;
 }
 
 /* Styling for some tags like p, hr, pre, code */
