Modified the feedback modal. Adjust the positions of the header and icons. Change how the tabs are shown in the card screen

--- a/src/pages/AppNameHeader.css
+++ b/src/pages/AppNameHeader.css
@@ -3,13 +3,15 @@
   font-weight: 900;
   font-size: 1.2em;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
 }
 
 .settings-icon {
   position: absolute;
   right: 0;
   align-self: center;
+  justify-self: center;
   margin-right: 1rem;
-  top: 25%;
+  top: 28%;
   font-size: 1.5rem;
 }
