--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -48,8 +48,8 @@
 .home-icon {
   position: absolute;
   align-self: center;
-  margin-right: 1rem;
-  top: 25%;
-  right: 0;
+  margin-left: 1rem;
+  top: 28%;
+  left: 0;
   font-size: 1.5rem;
 }
