--- a/src/pages/FeedbackModal.css
+++ b/src/pages/FeedbackModal.css
@@ -1,160 +1,54 @@
-.contact__container {
-  grid-template-columns: 1fr;
+.feedback-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  column-gap: 3rem;
-  padding-bottom: 3rem;
-}
-
-.contact__title {
-  text-align: center;
-  font-size: 1.25rem;
-  font-weight: 700;
-  margin-bottom: 1.5rem;
-}
-
-.contact__info {
-  display: grid;
-  row-gap: 1rem;
-  justify-content: center;
-  grid-template-columns: 1fr;
-}
-
-.contact__form {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.contact__card {
-  background-color: #fff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 1rem;
-  border-radius: 0.75rem;
-  text-align: center;
-}
-
-.contact__card-icon {
-  font-size: 2rem;
-  color: hsl(9, 0%, 20%);
-  margin-bottom: 0.25rem;
-}
-
-.contact__card-title,
-.contact__card-data {
-  font-size: 0.875rem;
-}
-
-.contact__card-title {
-  font-weight: 500;
-}
-
-.contact__card-data {
-  display: block;
-  margin-bottom: 0.75rem;
-}
-
-.contact__button {
-  color: hsl(9, 0%, 46%);
-  font-size: 0.875rem;
-  display: inline-flex;
   align-items: center;
-  justify-content: center;
-  column-gap: 0.25rem;
-}
-
-.contact__button-icon {
-  font-size: 1rem;
-  transition: 0.3s;
-}
-
-.contact__button:hover .contact__button-icon {
-  transform: translate(0.25rem);
-}
-
-.contact__form-div {
-  position: relative;
-  margin-bottom: 2rem;
-  height: 4rem;
-}
-
-.contact__form-input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 90%;
-  height: 100%;
-  border: 2px solid rgba(0, 0, 0, 0.15);
-
-  color: hsl(9, 0%, 46%);
-  outline: none;
-  border-radius: 0.75rem;
-  padding: 1.5rem;
-  z-index: 1;
-  color: beige;
-  padding: 0;
-  margin: 0;
-}
-
-.contact__form-tag {
-  position: absolute;
-  top: -0.75rem;
-  left: 1.25rem;
-  font-size: 1rem;
-  padding: 0.25rem;
-  background-color: hsl(9, 0%, 98%);
-  z-index: 10;
-  margin-left: 5%;
-}
-
-.contact__form-area {
-  height: 10rem;
-}
-
-.contact__form-area textarea {
-  resize: none;
-}
-
-.button-message {
-  display: inline-block;
-  background-color: gray;
-  color: #fff;
-  padding: 1.25rem 2rem;
-  border-radius: 1rem;
-  font-weight: 600;
-  font-size: 1.2rem;
-  margin-left: 5rem;
-  margin-top: 1.5rem;
-}
-
-.container {
-  position: absolute;
-  margin-top: 15%;
-  width: 95%;
   left: 2.5%;
-  height: 90%;
-  background-color: rgba(0, 0, 0, 0.8);
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid {
-  display: grid;
-  gap: 1.5rem;
-}
-.button::hover {
-  background-color: darkgray;
-}
-.button--flex {
-  display: inline-flex;
-  align-items: center;
+  background-color: #f4f4f4;
+  height: 50%;
+  width: 95%;
+  border-radius: 0 0 0.8rem 0.8rem;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+  top: 0;
 }
 
 .close-icon {
   position: absolute;
-  margin-top: 13%;
-  margin-right: 5%;
+  background-color: transparent;
+  right: 1rem;
+  top: 1rem;
+  color: grey;
+}
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.feedback-textarea {
+  background-color: snow;
+  box-shadow: inset 0 0 0 2px darkgrey;
+  border-radius: 0.4rem;
+  padding: 0.5rem 1.2rem;
+}
+
+.feedback-button {
+  background-color: snow;
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.5rem;
+  box-shadow: 0 0 2px 2px green;
+  border-radius: 8px;
+}
+.feedback-wrapper{
+  position: absolute;
   top: 0;
-  right: 0;
-  color: white;
+  width: 100%;
+  height: 100%;
+  transition: 0.8s;
+  z-index: 3;
 }
