--- a/src/pages/FeedbackModal.css
+++ b/src/pages/FeedbackModal.css
@@ -33,6 +33,7 @@
   box-shadow: inset 0 0 0 2px darkgrey;
   border-radius: 0.4rem;
   padding: 0.5rem 1.2rem;
+  margin-top: 2rem;
 }
 
 .feedback-button {
@@ -40,7 +41,7 @@
   margin-top: 1rem;
   font-size: 1rem;
   font-weight: bold;
-  padding: 0.5rem;
+  padding: 0.3rem;
   box-shadow: 0 0 2px 2px green;
   border-radius: 8px;
 }
