Fix the toolbar title display for android

--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -9,6 +9,7 @@
   font-weight: 900;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: green;
+  text-align: center;
 }
 
 /* Styling for the stack of card without animation */
