--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -46,11 +46,17 @@
   }
 }
 
-.home-icon {
+#cardscreen-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.back-icon {
   position: absolute;
   align-self: center;
   margin-left: 1rem;
   top: 28%;
   left: 0;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
